v2.4.17
----------------------------------------------------------------------------------------------------
 * A bug was fixed that caused very large MDomains with the combined DNS
   names exceeding ~7k to fail, as request bodies would contain partially
   wrong data from uninitialized memory. This would have appeared as
   failure in signing-up/renewing such configurations.
   This was reported by Ronald Crane (Zippenhop LLC).

v2.4.16
----------------------------------------------------------------------------------------------------
 * The `MDCertificateAuthority` directive can take more than one URL/name of
   an ACME CA. This gives a failover for renewals when 2 consecutive attempts
   to get a certificate failed. See REAME for details.
 * New directive `MDRetryDelay` to set the delay of retries. See README
   for details.
 * New directive `MDRetryFailover` to set the number of errored attempts
   before an alternate CA is selected for certificate renewals. See README
   for details.

v2.4.15
----------------------------------------------------------------------------------------------------
 * Fixed a bug leading to failed transfers for OCSP stapling information
   when more than 6 certificates needed updates in the same run.
   
v2.4.14
----------------------------------------------------------------------------------------------------
 * Added support for tailscale (https://tailscale.com) certificates to have
   trusted access to your internal domain names. See README.md for more
   information on how to set this up.
 * Fix for a memory leak in handling of JSON arrays. This leak was mainly
   triggered by the additions to the `server-status` handler and lead to
   increased process sizes with each request of a status page.

v2.4.13
----------------------------------------------------------------------------------------------------
 * A possible NULL pointer deref was fixed in the JSON code for
   persisting time periods (start+end). Fixes #282.